# fastapi-odmantic-realworld-example

./: .bandit  .dockerignore  .pre-commit-config.yaml  README.md  compose.yaml  dockerfile  pyproject.toml
infra/: Pulumi.yaml  __main__.py  requirements.txt
