[tool.poetry]
name = "fastapi-odmantic-realworld-example"
version = "0.1.0"
description = ""
authors = ["Arthur Pastel <arthur.pastel@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
odmantic = { git = "https://github.com/art049/odmantic.git" }
pydantic-settings = "^2.1.0"
uvicorn = "^0.27.0"
wily = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
isort = "^5.13.2"
black = "^22.6.0"
flake8 = "^7.0.0"
mypy = "^1.8"
pytest-asyncio = "^0.23.3"
pre-commit = "^2.20.0"
wily = "^1.25.0"
bandit = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
